Updated the QueryDispatcher class. Added test for query.

--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,8 @@
     "license": "MIT",
     "autoload": {
         "psr-4": {
-            "YG\\Phalcon\\": "src/"
+            "YG\\Phalcon\\": "src/",
+            "YG\\Test\\": "test/"
         }
     },
     "authors": [
