Added working with annotation feature for the CommandDispatcher and QueryDispatcher

--- a/composer.json
+++ b/composer.json
@@ -16,5 +16,10 @@
         }
     ],
     "require": {
+        "php": ">=7.4",
+        "ext-phalcon": "~4.1.2"
+    },
+    "require-dev": {
+        "phalcon/ide-stubs": "^4.1"
     }
 }
